<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileQuidditch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World!</string>
    <string name="write_to_tag">Write to Tag</string>
    <string name="quaffle_text">Quaffle</string>
    <string name="bludger_text">Bludger</string>
    <string name="snitch_text">Snitch</string>
    <string name="goal_text">Goal</string>
    <string name="slytherin_text">Slytherin</string>
    <string name="gryffindor_text">Griffindor</string>
    <string name="slytherin_score">0</string>
    <string name="gryffindor_score">0</string>
    <string name="final_score">Final Score</string>
    <string name="title_activity_final_score">FinalScoreActivity</string>

</resources>
