<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cloudbg"
    >
    <ImageView
            android:id="@+id/Quaffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/quaffle_button"
            android:contentDescription="@string/quaffle_text"
            android:visibility="gone"
            android:layout_centerInParent="true" />
    <ImageView
            android:id="@+id/Bludger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/bludger_button"
            android:contentDescription="@string/bludger_text"
            android:visibility="gone"
            android:layout_centerInParent="true" />
    <ImageView
            android:id="@+id/Goal"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:src="@drawable/goal_button"
            android:contentDescription="@string/goal_text"
            android:visibility="gone"
            android:layout_alignParentBottom = "true"/>

</RelativeLayout>